Meta tags included in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Find your latest & greatest urbanwear here."
+      content="Find and shop for your latest & greatest urbanwear here, at Urban Chaser Ltd."
     />
     <meta property="og:image" content="../src/assets/urban_chaser.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
