Meta tags included in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Find and shop for your latest & greatest urbanwear here, at Urban Chaser Ltd."
     />
-    <meta property="og:image" content="../src/assets/urban_chaser.jpg" />
+    <meta property="og:image" content="../src/assets/urban_chaser.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
